alignment are fixed

--- a/app/styles/tooltip.less
+++ b/app/styles/tooltip.less
@@ -1,8 +1,8 @@
 #tooltip{
   background: pink;
   border-radius: 3px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   border: 1px solid pink;
   margin-left: 11px;
@@ -12,8 +12,8 @@
 
 #toptip{
   margin-left: 188px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: lightseagreen;
   border: 1px solid lightseagreen;
@@ -23,8 +23,8 @@
 }
 #wide{
   margin-left: 350px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #D0A9F5;
   border: 1px solid #D0A9F5;
@@ -33,9 +33,9 @@
   position: absolute;
 }
 #invert{
-  margin-left: 810px;
-  width: 150px;
-  height: 36px;
+  margin-left: 610px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #F7BE81;
   border: 1px solid #F7BE81;
@@ -45,9 +45,9 @@
 }
 
 #tool{
-  margin-left: 380px;
-  width: 150px;
-  height: 36px;
+  margin-left: 318px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: lightseagreen;
   border: 1px solid lightseagreen;
@@ -59,8 +59,8 @@
 #topright{
   background: #A9E2F3;
   border-radius: 3px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   border: 1px solid #A9E2F3;
   margin-left: 11px;
@@ -69,8 +69,8 @@
 }
 #top1{
   margin-left: 188px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #F3F781;
   border: 1px solid #F3F781;
@@ -80,8 +80,8 @@
 }
 #top2{
   margin-left: 350px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #E3CEF6;
   border: 1px solid #E3CEF6;
@@ -90,9 +90,9 @@
   position: absolute;
 }
 #r1{
-  margin-left: 89%;
-  width: 150px;
-  height: 36px;
+  margin-left: 79%;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #F3F781;
   border: 1px solid #F3F781;
@@ -102,8 +102,8 @@
 }
 #r2{
   margin-left: 0px;
-  width: 150px;
-  height: 36px;
+  width: 130px;
+  height: 18px;
   text-align: center;
   background: #E3CEF6;
   border: 1px solid #E3CEF6;
